Jaeksoft Open Search Server
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

Open Search Server 1.2

New features:
- 2982545: Extracting term frequency informations
- 2881385: API to retrieve the available indice
- 2887376: Enhancement for the index page - dropping indexes
- 2881388: API to list/create/modify fields in a specified schema
- 2973374: Upgrade to ZKoss 5.0.x	
- 2970747: Upgrade Tomcat to version 6.0.26
- 2966139: Statistics lost when OSS restart
- 2964704: Upgrade to Lucene 2.9.2
- 2958015: Add source archive
- 2958005: Upgrade Apache HttpClient library to 4.0.1	
- 2956498: Provide a way to send statistics report by email
- 2953803: Upgrade to PDFBox 1.0	
- 2953802: Upgrade to POI 3.6
- 2953575: Charset detection should look at meta http-equiv
- 2953524: Specify default charset for parser
- 2929332: Faceting post collapsing
- 2900462: Upgrade POI to 3.5 for xlsx and docs support
- 2900449: Upgrade PDFBox to 0.8

Bug fixes:
- 2982541: Phrase synonyms generate unwanted words
- 2934214: Shifted highlighting on snippet

Open Search Server 1.1.3

Bug fixes
- 2989836: Statistics are not set up in template
- 2988425: Crawler is not obeying disallow directives from robots.txt
- 2988433: Crawler ignores query part of URL when evaluating robots.txt

Changes:
- 2989831: Update the documentation link (wiki)

Open Search Server 1.1.2

New features:
- 2910029: Lucene read only support

Bug fixes
- 2885897: PHP API fail on some query with wrong xml chars
- 2820286: Issue with statistics aggregation
- 2911906: Sort functionnality seem to ignore sort order
- 2908345: Performance issue with large field cache
- 2905076: Issue with performance of web crawler
- 2903935: Negative value on web crawler statistics
- 2898343: Behaviour problem of wildcard function
- 2899784: duplication of returned field in returned xml

Open Search Server 1.1.1

Bug fixes