@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 Open Search Server 1.2
 
 New features:
+- 2991252: Possibility to index binary file and to add it to a document
 - 2982545: Extracting term frequency informations
 - 2881385: API to retrieve the available indice
 - 2887376: Enhancement for the index page - dropping indexes
